@@ -24,7 +24,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * @version $Id: functions_search_class.php 13 2016-04-27 09:26:01Z Boudewijn $
+ * @version $Id: functions_search_class.php 37 2017-01-31 08:44:35Z Boudewijn $
  * @package Genmod
  * @subpackage DB
  */
