@@ -22,7 +22,7 @@
  * @author Genmod Development Team
  * @package Genmod
  * @subpackage Display
- * @version $Id: media.php 13 2016-04-27 09:26:01Z Boudewijn $
+ * @version $Id: media.php 37 2017-01-31 08:44:35Z Boudewijn $
  */
 
 /**
