@@ -21,7 +21,7 @@
  *
  * @package Genmod
  * @subpackage Admin
- * @version $Id: viewlog.php 13 2016-04-27 09:26:01Z Boudewijn $
+ * @version $Id: viewlog.php 37 2017-01-31 08:44:35Z Boudewijn $
  */
 
 /**
